# fretboard-layout

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  RELEASE_NOTES.md  config.mk  deny.toml
data/: gfret.desktop
gui/: gfret.py
gui/data/: qfret.desktop
gui/src/: gfret.py  qfret.py
src/: appchooser.glade  appchooser.rs  backend.rs  cli.yaml  color.rs  config.rs  draw.rs  factors.rs  fretboard.rs  gfret_ui.glade  gui.rs  handedness.rs  layout.rs  lib.rs  main.rs  open.rs  plot.rs  prefs.glade  prefs.rs  run.rs  template.rs  tests.rs  ui.glade  variant.rs
src/config/: font.rs  mod.rs
src/gui/: mod.rs  ui.glade
src/gui/prefs/: appchooser.rs  mod.rs  prefs.glade
