[package]
name = "fretboard_layout"
version = "0.1.6"
authors = ["Nathan Fisher <nfisher.sr@gmail.com>"]
edition = "2021"
license-file = "LICENSE"
description = "Generate an svg template of a musical instrument fretboard"
repository = "https://codeberg.org/jeang3nie/fretboard-layout"
keywords = ["graphics", "design", "vector-graphics", "lutherie"]
categories = ["graphics", "multimedia::images", "mathematics", "simulation"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
svg = "~0.10"
rgba_simple = { git = "https://codeberg.org/jeang3nie/rgba-simple.git" }

[dependencies.hex]
version = "~0.4"
default-features = false
features = ["std"]

[dependencies.serde]
version = "~1.0"
features = ["derive"]

[profile.release]
panic = 'abort'
lto = true
codegen-units = 1
