[package]
name = "fretboard_layout"
version = "0.3.1"
authors = ["Nathan Fisher <nfisher.sr@gmail.com>"]
edition = "2021"
license = "BSD-2-Clause"
description = "Generate an svg template of a musical instrument fretboard"
repository = "https://codeberg.org/jeang3nie/fretboard-layout"
homepage = "https://jeang3nie.codeberg.page"
keywords = ["graphics", "design", "vector-graphics", "lutherie"]
categories = ["graphics", "multimedia::images", "mathematics", "simulation"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
svg = "~0.10"
rgba_simple = "~0.5"

[dependencies.serde]
version = "~1.0"
features = ["derive"]
