[package]
name = "fretboard_layout"
version = "0.5.0"
authors = ["Nathan Fisher <nfisher.sr@gmail.com>"]
edition = "2021"
license = "BSD-2-Clause"
description = "Generate an svg template of a musical instrument fretboard"
repository = "https://codeberg.org/jeang3nie/fretboard-layout"
homepage = "https://jeang3nie.codeberg.page"
keywords = ["graphics", "design", "vector-graphics", "lutherie"]
categories = ["graphics", "multimedia::images", "mathematics", "simulation"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
gdk = ["rgba_simple/gdk"]
serde = ["rgba_simple/serde", "dep:serde"]

[dependencies]
svg = "0.10"
rayon = "1.5"
rgba_simple = "0.8"

[dependencies.serde]
version = "1.0"
features = ["derive"]
optional = true

[dependencies.pango]
version = "*"
package = "pango"
optional = true
